# MIDER

./: .env.example  .gitignore  CLAUDE.md  README.md  mider.spec  pyproject.toml  requirements.txt  xml-line-number-fix-options.md
.claude/: settings.json
.claude/commands/: done.md  plan.md  review.md  status.md  task.md
.claude/scripts/: auto_manual.py  log_change.py  self_check.sh
.github/workflows/: build-windows-exe.yml
docs/: AI_SYSTEM_DESIGN.md  CLI_SPEC.md  DATA_SCHEMA.md  PRD.md  TECH_SPEC.md  USER_MANUAL.md  dev_vs_prod.md  workflow-summary.md  workflow.md  xml-line-number-fix-options.md  빌드이력.md
docs/architecture/: c_analysis_pipeline.md  js_analysis_pipeline.md  proc_analysis_pipeline.md  sql_analysis_pipeline.md  system_overview.md  xml_analysis_pipeline.md
docs/issue-log/: 001-large-file-analysis-gap.md  002-clang-tidy-header-limitation.md  003-pass2-large-function-dominance.md  004-gpt4o-mini-sql-index-hint-limitation.md  005-xml-script-extraction-missing.md  006-clang-tidy-header-error-fallback.md  007-c-duplicate-issues.md  008-proc-fclose-detection-gap.md  009-stub-header-auto-generation.md  010-llm-first-rule-redesign.md  011-pii-preprocessing-enhancement.md  012-issue-quality-control.md
docs/manuals/: agents.md  index.md  models.md  security.md  testing.md  tools.md
docs/quality/: changelog.md  error_detection_strategy.md  review-checklist.md
mider/: __init__.py  __main__.py  healthcheck.py  main.py
scripts/: build_exe.py  export_default_resources.py  gen_version_info.py
tests/: conftest.py  test_integration.py
(+172 files in other folders)
